--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+autopep8==1.7.0
+ffmpeg==1.4
+ffmpeg-python==0.2.0
+future==0.18.2
 numpy==1.23.4
 opencv-python==4.6.0.66
+PyAudio==0.2.12
+pycodestyle==2.9.1
+toml==0.10.2
